# nixspaces

./: .envrc  .gitignore  .prettierignore  CLAUDE.md  README.md  deny.toml  flake.nix  justfile  rustfmt.toml  sprint_plan.md
.claude/work-context/: current-task.md  implementation-notes.md  review-pipeline.md  test-notes.md
.considerations/: QUICK_REFERENCE.md  TECHNICAL_DEBT_SUMMARY.md
.design/ui/: SIMPLE_UI_DESIGN.md
.design/ux/: POWER_USER.md
.docs/: ARCHITECTURE.md  MVP_SPEC.md
.reviews/: current-review.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.tsx
